@@ -78,6 +78,7 @@
                         <a id="th-violet">Violet</a>
                         <a id="th-purple">Purple</a>
                         <a id="th-orange">Orange</a>
+                        <a id="th-sunset">Sunset</a>
                         <a id="th-pixel-art">Pixel Art</a>
                         <a id="th-galaxy">Galaxy</a>
                     </div>
@@ -118,6 +119,7 @@
                         <td>
                             <button class="button th-purple" id="buy-th-purple">Purple<br><span class="cost" id="cost-th-purple">8000</span></button>
                             <button class="button th-orange" id="buy-th-orange">Orange<br><span class="cost" id="cost-th-orange">8000</span></button>
+                            <button class="button th-sunset" id="buy-th-sunset">Sunset<br><span class="cost" id="cost-th-sunset">15000</span></button>
                             <button class="button th-galaxy" id="buy-th-galaxy">Galaxy<br><span class="cost" id="cost-th-galaxy">20000</span></button>
                         </td>
                     </tr>
